feat: svg path constructor class

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "tsc:watch": "tsc -b --noEmit --watch",
     "preview": "vite preview"
   },
   "dependencies": {
